S302T200-328 #time 30m Created method stubs for admin notifications in controller and service. Added type field to notifications. Modified API spec to reflect new type field on notifications.
